--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -12,7 +12,7 @@
 	};
 
 	memory {
-		reg = <0x0 0x80000000 0x80000000>; /* XXX should be 4GiB */
+		reg = <0x0 0x80000000 0x0 0x80000000>; /* XXX should be 4GiB */
 	};
 
 	serial@70006000 {
