CHROMIUM: ARM64: dts: tegra132: fix the cpu-release-addr
The cpu-release-add of Tegra132 should be 0x80000008.

BUG=none
TEST=build and boot on norrin64

Change-Id: Id37a1134dc96e3b7b817e8c34b62a0465228aaa7
Signed-off-by: Joseph Lo <josephl@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/213088
Reviewed-by: David Riley <davidriley@chromium.org>
Commit-Queue: David Riley <davidriley@chromium.org>
Tested-by: David Riley <davidriley@chromium.org>

--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -530,7 +530,7 @@
 			compatible = "nvidia,denver", "arm,armv8";
 			reg = <0x0 0x0>;
 			enable-method = "spin-table";
-			cpu-release-addr = <0x0 0x8000fff8>;
+			cpu-release-addr = <0x0 0x80000008>;
 			power-states = <&power_states>;
 		};
 
@@ -539,7 +539,7 @@
 			compatible = "nvidia,denver", "arm,armv8";
 			reg = <0x0 0x1>;
 			enable-method = "spin-table";
-			cpu-release-addr = <0x0 0x8000fff8>;
+			cpu-release-addr = <0x0 0x80000008>;
 			power-states = <&power_states>;
 		};
 	};
