CHROMIUM: arm64: dts: ryu: fix VDD_CPU and VDD_CORE
- rename regulator name to match with driver and let it to be compatible
  with other DTS files.
- smps6 should be power rail for VDD_CORE.

BUG=chrome-os-partner:31210
TEST=compile and boot ryu

Change-Id: I98e4732f6c0315efca8f91bc5c7acc4b12997679
Signed-off-by: Bill Huang <bilhuang@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/214458
Reviewed-by: David Riley <davidriley@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -176,7 +176,7 @@
 
 				regulators {
 					smps123 {
-						regulator-name = "vdd-cpu";
+						regulator-name = "vdd_cpu";
 						regulator-min-microvolt = <750000>;
 						regulator-max-microvolt = <1260000>;
 						regulator-always-on;
@@ -195,7 +195,7 @@
 					};
 
 					palmas_smps6: smps6 {
-						regulator-name = "vddio-ddr";
+						regulator-name = "vdd_core";
 						regulator-min-microvolt = <800000>;
 						regulator-max-microvolt = <1150000>;
 						regulator-always-on;
