CHROMIUM: arm64: dts: ryu: add DFLL support
Add dfll node for Tegra132 ryu.

BUG=chrome-os-partner:31210
TEST=compile and boot

Change-Id: I9eb4c146c13003d45b81cb99ea043238e3923ca9
Signed-off-by: Bill Huang <bilhuang@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/214459
Reviewed-by: David Riley <davidriley@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -175,7 +175,7 @@
 #endif
 
 				regulators {
-					smps123 {
+					vdd_cpu: smps123 {
 						regulator-name = "vdd_cpu";
 						regulator-min-microvolt = <750000>;
 						regulator-max-microvolt = <1260000>;
@@ -301,6 +301,12 @@
 
 			#thermal-sensor-cells = <1>;
 		};
+	};
+
+	dfll@70040084 {
+		vdd-cpu-supply = <&vdd_cpu>;
+		nvidia,i2c-fs-rate = <400000>;
+		status = "okay";
 	};
 
 	/* USB A connector */
