--- a/drivers/soc/tegra/Makefile
+++ b/drivers/soc/tegra/Makefile
@@ -2,6 +2,7 @@ obj-$(CONFIG_ARCH_TEGRA) += fuse/
 
 obj-$(CONFIG_ARCH_TEGRA) += common.o
 obj-$(CONFIG_ARCH_TEGRA) += flowctrl.o
+obj-$(CONFIG_ARCH_TEGRA) += pm.o
 obj-$(CONFIG_ARCH_TEGRA) += pmc.o
 
 obj-$(CONFIG_ARCH_TEGRA_132_SOC) += tegra132-trampoline.o
