--- a/drivers/soc/tegra/Makefile
+++ b/drivers/soc/tegra/Makefile
@@ -7,5 +7,6 @@ obj-$(CONFIG_ARCH_TEGRA) += pmc.o
 
 obj-$(CONFIG_ARCH_TEGRA_132_SOC) += tegra132-trampoline.o
 obj-$(CONFIG_ARCH_TEGRA_132_SOC) += pm-tegra132.o
+obj-$(CONFIG_ARCH_TEGRA_132_SOC) += sleep-tegra132.o
 obj-$(CONFIG_TEGRA_DVFS)	+= tegra-dvfs.o
 obj-$(CONFIG_TEGRA_124_DVFS)	+= tegra124-dvfs.o
