CHROMIUM: arm64: dts: ryu: Add gpio-restart node
ryu should be rebooted by toggling a GPIO.

BUG=chrome-os-partner:31528
TEST=none

Change-Id: I3ea8b45666ae4ffa327aacc245d8278c37e92bf5
Signed-off-by: David Riley <davidriley@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/214320
Reviewed-by: Olof Johansson <olofj@chromium.org>
Reviewed-by: Anatol Pomazau <anatol@google.com>

--- a/arch/arm64/boot/dts/tegra132-ryu.dts
+++ b/arch/arm64/boot/dts/tegra132-ryu.dts
@@ -364,7 +364,6 @@
 		nvidia,core-pwr-off-time = <61036>;
 		nvidia,core-power-req-active-high;
 		nvidia,sys-clock-req-active-high;
-		nvidia,reset-gpio = <&gpio TEGRA_GPIO(I, 5) GPIO_ACTIVE_LOW>;
 	};
 
 	clocks {
@@ -477,5 +476,11 @@
 			vin-supply = <&vdd_5v0_sys>;
 		};
 
+	};
+
+	gpio-restart {
+		compatible = "gpio-restart";
+		gpios = <&gpio TEGRA_GPIO(I, 5) GPIO_ACTIVE_LOW>;
+		priority = /bits/ 8 <200>;
 	};
 };
