CHROMIUM: ARM: dts: Use new compat name for trackpad on rk3288-pinky-rev1
The proper compat string for the device is "elan,i2c_touchpad" now.

BUG=chrome-os-partner:30167
TEST=With other patches can use evtest to test the trackpad.

Change-Id: I5d52779bf31b1dc870ee0014bc69b0fdcb8c4d43
Signed-off-by: Dmitry Torokhov <dtor@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/214227
Reviewed-by: Doug Anderson <dianders@chromium.org>
Commit-Queue: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/rk3288-pinky-rev1.dts
+++ b/arch/arm/boot/dts/rk3288-pinky-rev1.dts
@@ -342,7 +342,7 @@
 	status = "okay";
 
 	trackpad@15 {
-		compatible = "elan_i2c";
+		compatible = "elan,i2c_touchpad";
 		interrupt-parent = <&gpio7>;
 		interrupts = <3 IRQ_TYPE_EDGE_FALLING>;
 		pinctrl-names = "default";
