--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -1,6 +1,8 @@
 dtb-$(CONFIG_ARCH_VEXPRESS) += rtsm_ve-aemv8a.dtb foundation-v8.dtb
 dtb-$(CONFIG_ARCH_XGENE) += apm-mustang.dtb
-dtb-$(CONFIG_ARCH_TEGRA) += tegra132-norrin.dtb tegra132-ryu.dtb
+dtb-$(CONFIG_ARCH_TEGRA) += tegra132-norrin.dtb
+dtb-$(CONFIG_ARCH_TEGRA) += tegra132-ryu-p0.dtb
+dtb-$(CONFIG_ARCH_TEGRA) += tegra132-ryu-p1.dtb
 
 targets += dtbs
 targets += $(dtb-y)
