ARM: dts: Add spidev entry for spiflash for rk3288-pinky
This allows the AP to program the firmware via flashrom.

BUG=chrome-os-partner:31605
TEST=flashrom works, can program firmware. spidev /dev/spi### for spi2

Change-Id: Iad6bcf1cb619eaf9856f242ec7c588ff6e607184
Signed-off-by: Alexandru Stan <amstan@chromium.org>
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/214254

--- a/arch/arm/boot/dts/rk3288-pinky-rev1.dts
+++ b/arch/arm/boot/dts/rk3288-pinky-rev1.dts
@@ -260,6 +260,16 @@
 	};
 };
 
+&spi2 {
+	status = "okay";
+
+	spiflash@0 {
+		compatible = "spidev";
+		spi-max-frequency = <50000000>;
+		reg = <0>;
+	};
+};
+
 &i2c0 {
 	status = "okay";
 
