CHROMIUM: ARM64: dts: norrin: add node of gpio-keys
Add power key for norrin.

BUG=chrome-os-partner:31211
TEST=wake up from LP0

Change-Id: I45c37e5e4201ac16d16bb05137b255b0052716b2
Signed-off-by: Joseph Lo <josephl@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/217220
Reviewed-by: David Riley <davidriley@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-norrin.dts
+++ b/arch/arm64/boot/dts/tegra132-norrin.dts
@@ -1753,6 +1753,20 @@
 		};
 	};
 
+	gpio-keys {
+		compatible = "gpio-keys";
+
+		power {
+			label = "Power";
+			gpios = <&gpio TEGRA_GPIO(Q, 0) GPIO_ACTIVE_LOW>;
+			linux,code = <KEY_POWER>;
+			debounce-interval = <10>;
+			gpio-key,wakeup;
+			nvidia,pmc-wakeup = <&pmc
+				PMC_WAKE_TYPE_GPIO 51 PMC_TRIGGER_TYPE_NONE>;
+		};
+	};
+
 	regulators {
 		compatible = "simple-bus";
 		#address-cells = <1>;
