CHROMIUM: arm64: dts: ryu: Add LCD fixed regulators
Add fixed regulator nodes for the LCD vdd & io rails.

BUG=chrome-os-partner:30799,chrome-os-partner:31522
TEST=Builds on ryu, works on p0

Change-Id: I74c40b6643d6ef155ad94253e4dc10747ac56741
Signed-off-by: Sean Paul <seanpaul@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/214481
Reviewed-by: David Riley <davidriley@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu-p0.dts
+++ b/arch/arm64/boot/dts/tegra132-ryu-p0.dts
@@ -6,5 +6,11 @@
 	model = "Google Tegra132 Ryu P0";
 	compatible = "google,ryu-p0", "google,ryu", "nvidia,tegra132", \
 			"nvidia,tegra124";
+
+	regulators {
+		pplcd_vdd: fixed-regulator@5 {
+			gpio = <&palmas_gpio 6 0>;
+		};
+	};
 };
 
