--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -473,6 +473,24 @@
 			vin-supply = <&vdd_5v0_sys>;
 		};
 
+		fixed-regulator@5 {
+			compatible = "regulator-fixed";
+			reg = <5>;
+			regulator-name = "pplcd-vdd";
+			regulator-min-microvolt = <3000000>;
+			regulator-max-microvolt = <3000000>;
+			enable-active-high;
+		};
+
+		pp1800_lcdio: fixed-regulator@6 {
+			compatible = "regulator-fixed";
+			reg = <6>;
+			regulator-name = "pp1800-lcdio";
+			regulator-min-microvolt = <1800000>;
+			regulator-max-microvolt = <1800000>;
+			enable-active-high;
+			gpio = <&gpio TEGRA_GPIO(X, 0) GPIO_ACTIVE_HIGH>;
+		};
 	};
 
 	gpio-restart {
