CHROMIUM: arm64: dts: ryu: Mux CSI_DSIB pad as dsi
On ryu, we need dsib to drive the left side of the screen. Add
pinctrl entry to mux csi_dsib for dsi use.

BUG=chrome-os-partner:30799
TEST=Tested on ryu, screen comes up

Change-Id: I8854951be6661216d4f19128b24bd1b227dd16a5
Signed-off-by: Sean Paul <seanpaul@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/214699
Reviewed-by: David Riley <davidriley@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu-pinmux.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu-pinmux.dtsi
@@ -840,6 +840,11 @@
 				nvidia,tristate = <TEGRA_PIN_DISABLE>;
 				nvidia,enable-input = <TEGRA_PIN_DISABLE>;
 			};
+
+			mipi_pad_ctrl_dsi_b {
+				nvidia,pins = "mipi_pad_ctrl_dsi_b";
+				nvidia,function = "dsi_b";
+			};
 		};
 
 		pinmux_unused_lowpower: unused_lowpower {
