CHROMIUM: ARM: dts: Add touchpad supply on rk3288-pinky-rev1
Touchpad power supply is vcc33_tp.

BUG=chrome-os-partner:30167
TEST=Booted Pinky, tried touchpad.

Change-Id: I56ea43467731be32a601822a60516dd226d45923
Signed-off-by: Dmitry Torokhov <dtor@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/215137
Reviewed-by: Sonny Rao <sonnyrao@chromium.org>
Commit-Queue: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/rk3288-pinky-rev1.dts
+++ b/arch/arm/boot/dts/rk3288-pinky-rev1.dts
@@ -348,6 +348,7 @@
 		pinctrl-names = "default";
 		pinctrl-0 = <&trackpad_int>;
 		reg = <0x15>;
+		vcc-supply = <&vcc33_tp>;
 		wakeup-source;
 	};
 };
