CHROMIUM: arm: dts: modify power button on pinky rev1
power button is high active on pinky rev1

BUG=None
TEST=power button works well

Change-Id: Iede628ef3b8b3148db06e2cade523c3eb113cd9b
Signed-off-by: Chris Zhong <zyw@rock-chips.com>
Reviewed-on: https://chromium-review.googlesource.com/215798
Reviewed-by: Doug Anderson <dianders@chromium.org>
Tested-by: Doug Anderson <dianders@chromium.org>
Commit-Queue: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/rk3288-pinky-rev1.dts
+++ b/arch/arm/boot/dts/rk3288-pinky-rev1.dts
@@ -71,7 +71,7 @@
 		pinctrl-0 = <&pwrbtn>;
 
 		button@0 {
-			gpios = <&gpio0 5 GPIO_ACTIVE_LOW>;
+			gpios = <&gpio0 5 GPIO_ACTIVE_HIGH>;
 			linux,code = <116>;
 			label = "GPIO Key Power";
 			linux,input-type = <1>;
@@ -396,7 +396,7 @@
 
 	buttons {
 		pwrbtn: pwrbtn {
-			rockchip,pins = <0 5 RK_FUNC_GPIO &pcfg_pull_up>;
+			rockchip,pins = <0 5 RK_FUNC_GPIO &pcfg_pull_none>;
 		};
 	};
 
