CHROMIUM: arm64: dts: ryu: Fix ahub address
Ryu is 64-bit platform and its address should consist of 2 32-bit words.
It looks like this ahub part was copied from 32-bit version and has only 1 word
for address (and one for size).

TEST=enabled ahub and i2s. Checked CPU recognizes i2s.
BUG=chrome-os-partner:31720

Change-Id: Ibfe713c6c2ba5f203dc89742d09593b0d72854f5
Signed-off-by: Anatol Pomazau <anatol@google.com>
Reviewed-on: https://chromium-review.googlesource.com/215940
Reviewed-by: David Riley <davidriley@chromium.org>

--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -436,9 +436,9 @@
 
 	ahub@70300000 {
 		compatible = "nvidia,tegra124-ahub";
-		reg = <0x70300000 0x200>,
-		      <0x70300800 0x800>,
-		      <0x70300200 0x600>;
+		reg = <0x0 0x70300000 0x200>,
+		      <0x0 0x70300800 0x800>,
+		      <0x0 0x70300200 0x600>;
 		interrupts = <GIC_SPI 103 IRQ_TYPE_LEVEL_HIGH>;
 		clocks = <&tegra_car TEGRA124_CLK_D_AUDIO>,
 			 <&tegra_car TEGRA124_CLK_APBIF>;
